--- a/Step1/CMakeLists.txt
+++ b/Step1/CMakeLists.txt
@@ -1,7 +1,7 @@
 # TODO 1: Set the minimum required version of CMake to be 3.10
 cmake_minimum_required(VERSION 3.10)
 # TODO 2: Create a project named Tutorial
-project(Tutorial)
+project(Tutorial VERSION 1.0)
 # TODO 7: Set the project version number as 1.0 in the above project command
 
 # TODO 6: Set the variable CMAKE_CXX_STANDARD to 11
@@ -11,6 +11,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 # TODO 8: Use configure_file to configure and copy TutorialConfig.h.in to
 #         TutorialConfig.h
 
+include_directories("${PROJECT_BINARY_DIR}")
+
+configure_file(TutorialConfig.h.in TutorialConfig.h)
 # TODO 3: Add an executable called Tutorial to the project
 # Hint: Be sure to specify the source file as tutorial.cxx
 add_executable(Tutorial tutorial.cxx)
